# py-cli-table

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_cli_table/: __init__.py
tests/: test_cli_table.py
