[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-cli-table"
version = "0.1.8"
description = "Format Python data as aligned terminal tables with no dependencies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["table", "cli", "terminal", "format", "pretty-print"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-cli-table#readme"
Repository = "https://github.com/philiprehberger/py-cli-table"
Issues = "https://github.com/philiprehberger/py-cli-table/issues"
Changelog = "https://github.com/philiprehberger/py-cli-table/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_cli_table"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
